--- a/sign_up.html
+++ b/sign_up.html
@@ -8,13 +8,11 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h1>Circle Message Borad</h1>	
+		<h1>Message Borad Sign Up</h1>	
 		<form>
 			<input type="text" name="email" value="Email Address">
 			<input type="text" name="password" value="Password">
-			<input type="submit" value="Sign In">
+			<input type="submit" value="Sign Up">
 		</form>
-		<a href="sign_up.html">Sign up</a>
-		<a href="#">Forget Password</a>
 	</body>
 </html>
