add input property and add empty js file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<body>
 		<h1>Circle Message Borad</h1>	
 		<form>
-			<input type="text" name="email" value="Email Address">
-			<input type="text" name="password" value="Password">
+			<input type="text" name="email" placeholder="Email Address" id="email">
+			<input type="text" name="password" placeholder="Password" id="password">
 			<input type="submit" value="Sign In">
 		</form>
 		<a href="sign_up.html">Sign up</a>
