--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
 		<title>Circle Message Board</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+
 	</head>
 	<body>
-		<h1>Circle Message Borad</h1>	
-		<form>
-			<input type="text" name="email" placeholder="Email Address" id="email" required>
-			<input type="text" name="password" placeholder="Password" id="password" required>
-			<input type="submit" value="Sign In">
-		</form>
-		<a href="sign_up.html">Sign up</a>
-		<a href="#">Forget Password</a>
+		<div class="profile-image">
+			<img src="image/profile-green.png" alt="user-image">
+		</div>
+
+		<div class="sign-in-wrapper">
+			<form class="sign-in">
+				<input type="text" placeholder="Username or email" id="email" required>
+				<input type="text" placeholder="Enter password" id="password" required>
+				<input type="submit" value="Sign In">
+			</form>
+		</div>
+
+		<div class="sign-up">
+			<a href="#" id="sign-up-btn">Sign up</a>
+			<span>|</span>
+			<a href="#" id="forget-btn">Forget password</a>
+			<hr>
+		</div>
 	</body>
 </html>
