add social media icon
add and style social media icon

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 			<span>|</span>
 			<a href="#" id="forget-btn">Forget password</a>
 			<hr>
+			<span>or Sign up with</span>
+			<div class="social-media">
+				<a href="#" class="media-icon"><img src="image/facebook-icon.png"></a>
+				<a href="#" class="media-icon"><img src="image/wechat-icon.png"></a>
+				<a href="#" class="media-icon"><img src="image/twitter-icon.png"></a>
+				<a href="#" class="media-icon"><img src="image/weibo-icon.png"></a>
+			</div>
 		</div>
 	</body>
 </html>
