--- a/index.html
+++ b/index.html
@@ -7,33 +7,64 @@
 		<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		
 
 	</head>
 	<body>
-		<div class="profile-image">
-			<img src="image/profile-green.png" alt="user-image">
+		<!-- Log in -->
+		<div id="page">
+			<div class="profile-image">
+				<img src="image/profile-green.png" alt="user-image">
+			</div>
+
+			<div class="sign-in-wrapper">
+				<form class="sign-in">
+					<input type="text" placeholder="Username or email" id="email" required>
+					<input type="text" placeholder="Enter password" id="password" required>
+					<input type="submit" value="Sign In">
+				</form>
+			</div>
+
+			<div class="sign-up">
+				<button id="sign-up-btn">Sign up</button>
+				<span>|</span>
+				<button id="forget-btn">Forget password</button>
+				<hr>
+				<span>or Sign up with</span>
+				<div class="social-media">
+					<a href="#" class="media-icon"><img src="image/facebook-icon.png"></a>
+					<a href="#" class="media-icon"><img src="image/wechat-icon.png"></a>
+					<a href="#" class="media-icon"><img src="image/twitter-icon.png"></a>
+					<a href="#" class="media-icon"><img src="image/weibo-icon.png"></a>
+				</div>
+			</div>
 		</div>
 
-		<div class="sign-in-wrapper">
-			<form class="sign-in">
-				<input type="text" placeholder="Username or email" id="email" required>
-				<input type="text" placeholder="Enter password" id="password" required>
-				<input type="submit" value="Sign In">
+		<!-- Sign up Form --> 
+		<div id="sign-up" class="modal">
+			<!-- Form element -->
+			<span onclick="document.getElementById('sign-up').style.display='none'" class="close" title="Close Modal">×</span>
+			<form class="modal-content animate" action="/action_page.php">
+			    <div class="container">
+			      <label><b>Email</b></label>
+			      <input type="text" placeholder="Enter Email" name="email" class="sign-up-input" required>
+
+			      <label><b>Password</b></label>
+			      <input type="password" placeholder="Enter Password" name="psw" class="sign-up-input" required>
+
+			      <label><b>Repeat Password</b></label>
+			      <input type="password" placeholder="Repeat Password" name="psw-repeat" class="sign-up-input"  required>
+			      <p>By creating an account you agree to our <a href="#" id="privacy">Terms & Privacy</a>.</p>
+
+			      <div class="clearfix">
+			        <button type="button" onclick="document.getElementById('sign-up').style.display='none'" class="cancelbtn">Cancel</button>
+			        <button type="submit" class="signupbtn">Sign Up</button>
+			      </div>
+			    </div>
 			</form>
 		</div>
 
-		<div class="sign-up">
-			<a href="#" id="sign-up-btn">Sign up</a>
-			<span>|</span>
-			<a href="#" id="forget-btn">Forget password</a>
-			<hr>
-			<span>or Sign up with</span>
-			<div class="social-media">
-				<a href="#" class="media-icon"><img src="image/facebook-icon.png"></a>
-				<a href="#" class="media-icon"><img src="image/wechat-icon.png"></a>
-				<a href="#" class="media-icon"><img src="image/twitter-icon.png"></a>
-				<a href="#" class="media-icon"><img src="image/weibo-icon.png"></a>
-			</div>
-		</div>
+		<!-- JavaScript --> 
+		<script src="js/loading.js"></script>
 	</body>
 </html>
