--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
-		
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>>
 	</head>
 	<body>
 		<!-- Log in -->
@@ -39,26 +39,26 @@
 				</div>
 			</div>
 		</div>
-
+		
 		<!-- Sign up Form --> 
 		<div id="sign-up" class="modal">
 			<!-- Form element -->
 			<span onclick="document.getElementById('sign-up').style.display='none'" class="close" title="Close Modal">×</span>
-			<form class="modal-content animate" action="/action_page.php">
+			<form class="modal-content animate">
 			    <div class="container">
 			      <label><b>Email</b></label>
-			      <input type="text" placeholder="Enter Email" name="email" class="sign-up-input" required>
+			      <input type="text" id="userName" placeholder="Enter Email" name="email" class="sign-up-input" required>
 
 			      <label><b>Password</b></label>
-			      <input type="password" placeholder="Enter Password" name="psw" class="sign-up-input" required>
+			      <input type="password" id="passWord" placeholder="Enter Password" name="psw" class="sign-up-input" required>
 
 			      <label><b>Repeat Password</b></label>
-			      <input type="password" placeholder="Repeat Password" name="psw-repeat" class="sign-up-input"  required>
+			      <input type="password" id = "rePassword" placeholder="Repeat Password" name="psw-repeat" class="sign-up-input"  required>
 			      <p>By creating an account you agree to our <a href="#" id="privacy">Terms & Privacy</a>.</p>
 
 			      <div class="clearfix">
 			        <button type="button" onclick="document.getElementById('sign-up').style.display='none'" class="cancelbtn">Cancel</button>
-			        <button type="submit" class="signupbtn">Sign Up</button>
+			        <button type="button" class="signupbtn" id="signUpSubmit" onclick="signUp()">Sign Up</button>
 			      </div>
 			    </div>
 			</form>
@@ -66,5 +66,6 @@
 
 		<!-- JavaScript --> 
 		<script src="js/loading.js"></script>
+		<script src="js/login.js"></script>
 	</body>
 </html>
