add userName field

--- a/mission.html
+++ b/mission.html
@@ -14,6 +14,7 @@
     <div id="form">
       <!-- <input type="text" id="addRequest"/> -->
       <button id="new-request-btn">New Request</button>
+      <p>Current User:</p><p class="userName">Circle</p>
     </div>
   </div>
   
