add log out button
add log out button and update css
add field for who post the request

--- a/mission.html
+++ b/mission.html
@@ -13,16 +13,17 @@
     <!-- <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="random">Click here for random article</a> -->
     <div id="form">
       <!-- <input type="text" id="addRequest"/> -->
-      <button id="new-request-btn">New Request</button>
-      <p>Current User:</p><p class="userName">Circle</p>
+      <button class="btn" id="new-request-btn">New Request</button>
+      <button class="btn" id="log-out-btn">Log out</button>
+      <p>Current User:</p><p class="userNameb">Circle</p>
     </div>
   </div>
   
   <div>
     <ul id="searchResult">
-      <li><a href="#">Request 1<p>Here is the request information</p></a></li>
-      <li><a href="#">Request 2<p>Here is the request information</p></a></li>
-      <li><a href="#">Request 3<p>Here is the request information</p></a></li>
+      <li><a href="#">Request 1<p>Here is the request information</p><span>Post by:</span><span class="requester">Circle</span></a></li>
+      <li><a href="#">Request 2<p>Here is the request information</p><span>Post by:</span><span class="requester">Circle</span></a></li>
+      <li><a href="#">Request 3<p>Here is the request information</p><span>Post by:</span><span class="requester">Circle</span></a></li>
     </ul>
   </div>
 
