--- a/mission.html
+++ b/mission.html
@@ -192,7 +192,7 @@
           
             <br>
             <label class="request_lbl"><b>Detail</b></label>
-            <textarea name="detail" form="add-request">Enter text here...</textarea>
+            <textarea id="request-info" name="detail" form="add-request"></textarea>
 
             <div class="clearfix">
               <button type="button" onclick="document.getElementById('add-request').style.display='none'" class="cancel_btn">Cancel</button>
