--- a/mission.html
+++ b/mission.html
@@ -35,11 +35,11 @@
           <div class="container">
             <label class="request_lbl"><b>Post Type</b></label>
             <label>
-              <input type="radio" name="urgentType" value="urgent"> Urgent
+              <input type="radio" name="urgentType" value="urgent" required> Urgent
             </label>
             
             <label>
-              <input type="radio" name="urgentType" value="no_rush"> No rush
+              <input type="radio" name="urgentType" value="no_rush" required> No rush
             </label>
             
 
